# neuromancy

./: .gitignore  .gitmodules  CMakeLists.txt
compute/: nn.cl  optim.cl
editor/: CMakeLists.txt
editor/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: activation.hpp  nn.hpp
lib/include/core/: types.h
lib/include/models/: logic_gates.hpp
lib/src/: main.cpp
lib/src/backend/: opencl.hpp
lib/src/backend/opencl/: mem.cpp  mem.hpp
lib/src/core/time/: clock.cpp
lib/src/models/: logic_gates.cpp  mnist.cpp
src/: digit_net.cpp  digit_net.hpp  gate_net.cpp  loss_calculation.hpp  main.cpp  mnist.cpp  mnist.hpp  nn.cpp  nn.hpp
src/backend/: opencl.hpp
src/backend/opencl/: mem.cpp  mem.hpp
src/core/: file.h  logger.h
src/models/: logic_gates.cpp  mnist.cpp  mnist.hpp
trained_models/: mnist.model
